# Chess-rust

./: .gitignore  Cargo.toml
src/: board.rs  game.rs  main.rs
src/io/: console.rs  mod.rs  window.rs
src/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/render/: console.rs
